--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,23 @@
+@import "./fonts";
+
 $color: black;
+
+$grey-font-color: #7f7f7f;
+$dark-font-color: #121212;
+$light-font-color: #ffffff;
+
+$dark-main-color: #121212;
+$ligth-main-color: #ffffff;
+
+$nav-background-color: #eff0f4;
+
+$grey-background-color: #f5f6f8;
+$white-background-color: #ffffff;
+
+$accent-danger: #da3833;
+
+// Font
+$heading-font-family: "merriweather", sans-serif;
+$body-font-family: "proxima-nova", sans-serif;
+$base-font-size: 18px;
+$base-font-weight: 400;
