Adding Header Page

--- a/src/components/style/SideNav.scss
+++ b/src/components/style/SideNav.scss
@@ -5,6 +5,10 @@
   padding: 48px 24px 0px 32px;
 }
 
+.side-nav-wrapper {
+  border: 1px solid #d0d5d9;
+}
+
 span.title-nav {
   font-family: $body-font-family;
   letter-spacing: 0.8px;
