--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,12 +10,13 @@ $dark-main-color: #121212;
 $ligth-main-color: #ffffff;
 
 $nav-background-color: #eff0f4;
-
 $grey-background-color: #f5f6f8;
 $white-background-color: #ffffff;
+$dark-backgroud-color: #0f0f0f;
 
 $accent-danger: #da3833;
 
+$border-color: #d0d5d9;
 // Font
 $heading-font-family: "merriweather", sans-serif;
 $body-font-family: "proxima-nova", sans-serif;
