--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -11,3 +11,13 @@
   font-weight: $weight;
   color: $color;
 }
+
+@mixin animate($animation, $duration, $method, $times) {
+  animation: $animation $duration $method $times;
+}
+
+@mixin keyframes($name) {
+  @keyframes #{$name} {
+    @content;
+  }
+}
